# difficient

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
difficient-macros/: Cargo.toml  README.md
difficient-macros/src/: lib.rs
examples/: visitor.rs
src/: chrono.rs  lib.rs  serde_visit.rs  uuid.rs  vec.rs
tests/: integration.rs
