[workspace]
members = ["difficient-macros"]

[package]
name = "difficient"
version = "0.1.0"
description = "Efficient, type-safe, zero-allocation structural diffing"
edition = "2021"
license = "MIT"
repository = "http://github.com/redbadger/difficient"
homepage = "http://github.com/redbadger/difficient"
keywords = ["derive", "diff", "structural diff"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4", optional = true }
difficient-macros = { path = "difficient-macros" }
serde = { version = "1.0", features = ["derive"], optional = true }
similar = "2.6.0"
thiserror = "1.0"
uuid = { version = "1.11", optional = true }

[features]
chrono = ["dep:chrono"]  # impl Diffable on `chrono::DateTime`
uuid = ["dep:uuid"]      # impl Diffable on `uuid::Uuid`
serde = ["dep:serde", "difficient-macros/serde_impl"]    # add serde derives to derived structs
visitor = ["serde", "difficient-macros/visitor_impl"] # add AcceptVisitor impl

# choose your vec diff algo
vec_diff_myers = []   # is generally more efficient
vec_diff_lcs = []     # can result in smaller diffs in certain circumstances

default = ["vec_diff_lcs"]

[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.8.5"
serde_json = "1.0.122"


[[example]]
name = "visitor"
required-features = ["visitor"]
