[workspace]
members = ["difficient-macros"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "http://github.com/redbadger/difficient"
homepage = "http://github.com/redbadger/difficient"
keywords = ["derive", "diff", "structural diff"]

[package]
name = "difficient"
version = "0.1.0"
description = "Efficient, type-safe, zero-allocation structural diffing"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
chrono = { version = "0.4", optional = true }
difficient-macros = { path = "difficient-macros" }
serde = { version = "1.0", features = ["derive"], optional = true }
similar = "2.6.0"
thiserror = "1.0"
uuid = { version = "1.11", optional = true }

[features]
# impl Diffable on `chrono::DateTime`
chrono = ["dep:chrono"]

# impl Diffable on `uuid::Uuid`
uuid = ["dep:uuid"]

# add serde derives to derived structs
serde = ["dep:serde", "difficient-macros/serde_impl"]

# add AcceptVisitor impl
visitor = ["serde", "difficient-macros/visitor_impl"]

# choose your vec diff algorithm:
# the default is lcs, which can result in smaller diffs in certain circumstances,
# but you can choose myers instead, which may be more efficient
vec_diff_myers = []


[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.8.5"
serde_json = "1.0.122"


[[example]]
name = "visitor"
required-features = ["visitor"]
