[package]
name = "difficient-macros"
description = "macros for the difficient crate"
version = "0.1.0"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21.0"
heck = "0.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"

[features]
serde_impl = []
visitor_impl = ["serde_impl"]

[dev-dependencies]
pretty_assertions = "1.4.1"
prettyplease = "0.2.36"
